--- a/Templates/tabla_v1.html
+++ b/Templates/tabla_v1.html
@@ -1,4 +1,4 @@
-<h2> AJAX -{{ nombre }}-{{ apellido }}</h2>
+<h2> AJAX -{{ nombre }}-{{ apellido }}-{{ json }}</h2>
 <h2> AJAX is not a programming language. </h2>
 
 <h2> AJAX is a technique for accessing web servers from a web page. </h2>
